# zvec

./: CLAUDE.md
docs/graph/: design.md  plan.md  python_api_examples.md  usage.md
python/tests/: test_graph_e2e.py  test_graph_mutations.py  test_graph_schema.py  test_graph_traversal.py
python/zvec/: __init__.py  zvec.py
python/zvec/graph/: __init__.py  graph.py  schema.py  types.py
src/: CMakeLists.txt
src/binding/python/: CMakeLists.txt
src/binding/python/include/: python_graph.h
src/binding/python/model/: python_graph.cc
src/db/: CMakeLists.txt  collection.cc
src/db/index/common/: type_helper.h  version_manager.cc
src/graph/: CLAUDE.md  CMakeLists.txt  graph_collection.cc  graph_collection.h  graph_edge.h  graph_engine.cc  graph_engine.h  graph_node.h  graph_schema.cc  graph_schema.h  mutation_engine.cc  mutation_engine.h  subgraph.cc  subgraph.h  traversal.cc  traversal.h
src/graph/proto/: graph.proto
src/graph/storage/: graph_kv_store.cc  graph_kv_store.h  index_merge_operator.cc  index_merge_operator.h  storage_interface.h  zvec_storage.cc  zvec_storage.h
tests/: CMakeLists.txt
tests/db/index/common/: version_manager_test.cc
tests/graph/: CMakeLists.txt  concurrent_bench_test.cc  graph_collection_test.cc  graph_engine_test.cc  graph_kv_store_test.cc  graph_schema_test.cc  mutation_engine_test.cc  subgraph_test.cc  traversal_bench_test.cc  traversal_test.cc  zvec_storage_test.cc
